# unity_imgui_plugin

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.json
.github/workflows/: build.yml
Plugins/Darwin/: UnityImGuiPlugin.dylib
Runtime/: ImGuiAPI.cs  Liashchuk.UnityImGui.asmdef  UnityImGuiPlugin.cs
android/: AndroidManifest.xml
cmake/: android_aar.cmake  imgui.cmake
include/Android/: GLESBackend.hpp  VulkanImGuiRenderer.hpp
include/Apple/: MetalBackend.hpp
include/Windows/: D3D11Backend.hpp  D3D12Backend.hpp
include/common/: UnityImGuiPlugin.h
include/iOS/: TouchInterceptorView.h
package/Plugins/Darwin/: UnityImGuiPlugin.dylib
package/Runtime/: UnityImGuiPlugin.asmdef  UnityImGuiPlugin.cs
src/Android/: GLESBackend.cpp  UnityImGuiPlatform.cpp  VmaImpl.cpp  VulkanImGuiRenderer.cpp
src/Apple/: AppleUnityImGui.mm  MetalBackend.cpp
src/Darwin/: UnityImGuiPlatform.mm
src/Windows/: D3D11Backend.cpp  D3D12Backend.cpp  UnityImGuiPlatform.cpp
src/common/: ImGuiCApi.cpp  PluginInternal.h  UnityImGuiPlugin.cpp
src/iOS/: TouchInterceptorView.mm  UnityImGuiPlatform.mm
